Use compact array declaration
- Remove redundant parentheses
- Use valueOf()
- Use diamonds